# pre-commit-check-git-user

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  renovate.json  setup.py  sonar-project.properties
.github/workflows/: bump-version.yml  python-package.yml  release.yml
pre_commit_hooks/: check_git_config_user_email.py  check_git_config_user_name.py
tests/: test_check_git_config_user_email.py  test_check_git_config_user_name.py
