[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pre-commit-check-git-user"
version = "0.9.3"
description = "Pre-commit hooks for checking Git user settings."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sergey Grigoriev", email = "s.grigoriev@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "mypy==1.19.1",
    "ruff==0.14.11",
]

[project.urls]
Homepage = "https://github.com/grigoriev/pre-commit-check-git-user"
Repository = "https://github.com/grigoriev/pre-commit-check-git-user"
Issues = "https://github.com/grigoriev/pre-commit-check-git-user/issues"

[project.scripts]
check-git-config-user-email = "pre_commit_hooks.check_git_config_user_email:main"
check-git-config-user-name = "pre_commit_hooks.check_git_config_user_name:main"

[tool.hatch.build.targets.wheel]
packages = ["pre_commit_hooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pre_commit_hooks"]

[tool.uv]
required-version = ">=0.5.0"

[tool.coverage.run]
source = ["pre_commit_hooks"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true
